--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -77,41 +77,40 @@ body.front main .aurora-section-third {
 // body.page-node
 
 body.page-node .aurora-sample-layout {
-  @include clearfix;
+  // @include clearfix;
 }
 
 body.page-node main .aurora-section-first {
   height: 180px;
-  clear: both;
   margin-top: -1.5em;
-
+  width:100%;
+  clear:left;
   @include breakpoint($tablet) {
     @include grid-span(6, 1);
-    clear: both;
     height: 180px;
     margin-top: inherit;
-
   }
 
   @include breakpoint($desktop) {
     @include grid-span(12, 1, $output-style: 'float');
     height: 360px;
-    clear: both;
     margin-top: inherit;
+    width:inherit;
+    float:left;
   }
 }
 
 body.page-node main .aurora-section-second {
   @include add-gutter-style('split');
-  clear: both;
+  clear: left;
   @include breakpoint($tablet) {
     @include grid-span(6, 1);
-    clear: both;
+    clear: left;
   }
   @include breakpoint($desktop) {
     @include grid-span(12, 1, $output-style: 'float');
     height: 360px;
-    clear: both;
+    clear: left;
     margin-top: inherit;
   }
 
